# tello_vio

./: CMakeLists.txt  README.md  prompt.txt  trajectory_data.txt  visualize_trajectory.py
inc/: command_socket.hpp  frame_queue.hpp  state_socket.hpp  tello.hpp  video_socket.hpp
lib_h264decoder/: h264decoder.cpp  h264decoder.hpp
main/: check_imu.cpp  check_video.cpp  main.cpp
monocular_vo/: CMakeLists.txt  main.cpp
monocular_vo/include/: vo.h  vo_utils.h
monocular_vo/src/: vo.cpp
src/: state_socket.cpp  tello.cpp  video_socket.cpp
telemetry/: tello_state_2026_04_27_19_23_16.csv  tello_state_2026_04_27_19_25_06.csv  tello_state_2026_04_27_19_28_47.csv  tello_state_2026_04_27_19_32_23.csv  tello_state_2026_04_27_19_32_56.csv  tello_state_2026_04_27_19_33_02.csv  tello_state_2026_04_27_19_33_28.csv  tello_state_2026_04_27_19_35_33.csv  tello_state_2026_04_27_19_39_12.csv  tello_state_2026_04_27_19_39_30.csv  tello_state_2026_04_27_19_41_10.csv  tello_state_2026_04_27_19_49_12.csv  tello_state_2026_04_27_19_50_21.csv  tello_state_2026_04_27_19_52_53.csv  tello_state_2026_04_27_19_57_46.csv  tello_state_2026_04_27_19_58_06.csv  tello_state_2026_04_27_20_02_11.csv  tello_state_2026_04_27_20_02_16.csv  tello_state_2026_04_27_23_29_51.csv  tello_state_2026_04_27_23_32_25.csv  tello_state_2026_04_27_23_34_42.csv  tello_state_2026_04_27_23_35_12.csv
trajectories/: vio_trajectory_2026_04_27_19_25_06.csv  vio_trajectory_2026_04_27_19_32_23.csv  vio_trajectory_2026_04_27_19_33_02.csv  vio_trajectory_2026_04_27_19_33_28.csv  vio_trajectory_2026_04_27_19_35_33.csv  vio_trajectory_2026_04_27_19_41_10.csv  vio_trajectory_2026_04_27_23_35_12.csv
